--- a/config.toml
+++ b/config.toml
@@ -1,2 +1,2 @@
 stream = "/tmp/test2.stream"
-download_path = "/home/jief/workspace/unicom-torrent/download"
+download_path = "/media/storage/download"
